Stage 1 site deployment and READme

--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -163,7 +163,7 @@
 .modal__switch-button {
   border: none;
   background: none;
-  font-family: "Cormorant Garamond", "Times New Roman", Times, serif;
+  font-family: "Cabinet Grotesk Bold";
   font-weight: 700;
   font-size: 16px;
   line-height: 1.25;
