--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -37,6 +37,21 @@
   color: #a2bba0;
 }
 
+.header__auth-button {
+  font-family: "Cormorant Garamond", "Times New Roman", Times, serif;
+  font-weight: 400;
+  font-size: 18px;
+  cursor: pointer;
+  border-color: rgb(155, 154, 154);
+  background-color: #dbe9da;
+  border-radius: 8px;
+  transition: background-color ease-in-out 0.3s;
+}
+
+.header__auth-button:hover {
+  background-color: #a2bba0;
+}
+
 @media screen and (max-width: 650px) {
   .header__logo {
     height: 30px;
